--- a/app/views/nodes/index.html.erb
+++ b/app/views/nodes/index.html.erb
@@ -1,19 +1,7 @@
-<% content_for :head do %>
-    <%= stylesheet_link_tag 'https://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.css' %>
-    <%= javascript_include_tag 'https://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.js' %>
-<% end %>
 <p id="notice"><%= notice %></p>
 
 <%= nodes_tree_for @nodes %>
 
-<%= link_to 'New Node', new_node_path %>
+<%= link_to 'New Project', new_node_path %>
 
 <hr>
-
-<!-- <div id="gantt_here" style='width:100%; height:800px;'></div>
-
-<script>
-    gantt.init("gantt_here");
-    gantt.config.date_format = "%Y-%m-%d %H:%i:%s";
-   gantt.load("/nodes");
-</script> -->
