--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,9 @@
+// @import "bootstrap";
+@import "hl-style_new";
+@import "bootstrap.min.css";
+@import "home-style";
+//@import "homecategoryslider";
+@import "responsive";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -10,8 +16,9 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require bootstrap.min.css
+ * require bootstrap.min.css
  *= require jsgantt.css
+ * reuire hl-style_new
  *= require_tree .
  *= require_self
  */
