--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,23 +1,25 @@
-nav.navbar.navbar-expand-lg.navbar-light.bg-light
-  a.navbar-brand[href="#"]
-    | Navbar
-  button.navbar-toggler[type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"]
-    span.navbar-toggler-icon
-  #navbarNav.collapse.navbar-collapse
-    ul.navbar-nav
-      li.nav-item.active
-        - if user_signed_in?
+nav.navbar.navbar-default.navbar-fixed-top role="navigation"
+  .container
+    /! Brand and toggle get grouped for better mobile display
+    .navbar-header
+      button.navbar-toggle.menu_icon data-target="#navbar-top" data-toggle="collapse" type="button"
+        span.sr-only Toggle navigation
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
+        /! <span class="menu-bar">Menu</span
+      a.navbar-brand href="/"
+        .hidden-sm.hidden-xs
+        img alt=("Logo humminglive new") src="https://www.humminglive.com/assets/logo-humminglive_new-0a6fc8cc5bc42d281ff387e104f172ae.png" /
+    /! Collect the nav links, forms, and other content for toggling
+    #navbar-top.collapse.navbar-collapse.hidden-xs
+      ul.nav.navbar-nav.navbar-right
+       - if current_user
           li
-            = link_to('Logout', destroy_user_session_path, method: :delete)
-        - else
+            a href="/iam-creative" style="" My Workspace
           li
-            = link_to('Login', new_user_session_path)
-      /li.nav-item
-        a.nav-link[href="#"]
-          | Features
-      /li.nav-item
-        a.nav-link[href="#"]
-          | Pricing
-      /li.nav-item
-        a.nav-link.disabled[href="#" tabindex="-1" aria-disabled="true"]
-          | Disabled
+            a href="/creatives" style=""  My Tasks
+          li = link_to " Sign Out ", destroy_user_session_path, method: :delete,  class: 'main-menu' , style: "color:#e9573f"
+       - else
+          li
+            a.main-menu href="/users/sign_in" style="color:#e9573f"  Sign In
