--- a/app/views/nodes/show.html.slim
+++ b/app/views/nodes/show.html.slim
@@ -1,7 +1,6 @@
-.row
-  .col-md-12
-   .row
-    .col-md-4
+.container
+  .row
+    .col-md-6
       p#notice= notice
       p
         strong Name:
