--- a/app/views/nodes/index.html.erb
+++ b/app/views/nodes/index.html.erb
@@ -1,7 +1,8 @@
+<div style="margin-top:100px">
 <p id="notice"><%= notice %></p>
 
 <%= nodes_tree_for @nodes %>
 
 <%= link_to 'New Project', new_node_path %>
-
+</div>
 <hr>
