--- a/app/views/accounts/new.html.slim
+++ b/app/views/accounts/new.html.slim
@@ -1,5 +1,5 @@
 h1 New account
+div(style="margin-top:100px")
+	== render 'form'
 
-== render 'form'
-
-= link_to 'Back', accounts_path
+/= link_to 'Back', accounts_path
