--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -2,7 +2,7 @@
   .col-md-8
     /h1 Home page
     /= render 'home/intro'
-  .col-md-4
+  .col-md-4(style="margin-top:100px")
     .heading
       ' Signup to be Studio
     = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
