--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -16,9 +16,10 @@ nav.navbar.navbar-default.navbar-fixed-top role="navigation"
       ul.nav.navbar-nav.navbar-right
        - if current_user
           li
-            a href="/iam-creative" style="" My Workspace
+            /= link_to "My Workspace", my_workspace_dashboard_index_path
+            /a href="dashboard/my_workspace" style="" My Workspace
           li
-            a href="/creatives" style=""  My Tasks
+            a href="/" style=""  My Tasks
           li = link_to " Sign Out ", destroy_user_session_path, method: :delete,  class: 'main-menu' , style: "color:#e9573f"
        - else
           li
