--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -1,9 +1,39 @@
 .container(style="margin-top:80px")
-  div.panel.panel-default(style="width:50%";padding:10px;)
-    div(style="padding:20px;")
-			h3 Accounts list
-			hr
-			- @accounts.each do |a|
-			  = link_to account_path(a)
-					= a.name
-					hr
+  .row
+    .col-md-6
+      div.panel.panel-default(style="width:100%";padding:5px;)
+        div(style="padding:20px;")
+          .row
+            .col-md-6
+              h3 Accounts list
+            /.col-md-5
+              H3 = link_to "+ New Account", new_user_path
+          hr
+          - @accounts.each do |a|
+            = link_to account_path(a)
+              = a.name
+              hr
+    .col-md-6
+      div.panel.panel-default(style="width:100%";padding:10px;)
+        div(style="padding:20px;")
+          .row
+            .col-md-6
+              h3 Tasks list
+            /.col-md-5
+              H3 = link_to "+ New Account", new_user_path
+          hr
+          - @assignments.each do |a|
+              .row
+                .col-md-1
+                  = link_to assignment_path(a)
+                    = a.node.name
+                .col-md-2
+                  = a.status_display
+                .col-md-2
+                  = a.user.name
+                .col-md-3
+                  = a.start_date
+                .col-md-3
+                  = a.end_date
+            
+         
