--- a/app/views/accounts/show.html.slim
+++ b/app/views/accounts/show.html.slim
@@ -22,9 +22,13 @@ div(style="margin-top:100px;")
           h3 Users list
           hr
           - @account.users.each do |user|
-            = link_to user_path(user)
-              = user.name
-              hr
+            .row
+              .col-md-3
+                = link_to user_path(user)
+                  = user.name
+              .col-md-3
+                = user.user_role_display
+            hr
     
 
 => link_to 'Edit', edit_account_path(@account)
