--- a/app/views/assignments/show.html.slim
+++ b/app/views/assignments/show.html.slim
@@ -1,27 +1,28 @@
-p#notice = notice
+.container(style="margin-top:100px;")
+  p#notice = notice
 
-p
-  strong Status:
-  = @assignment.status
-p
-  strong Start date:
-  = @assignment.start_date
-p
-  strong End date:
-  = @assignment.end_date
-p
-  strong Completition date:
-  = @assignment.completition_date
-p
-  strong Description:
-  = @assignment.description
-p
-  strong Node:
-  = @assignment.node
-p
-  strong User:
-  = @assignment.user
+  p
+    strong Status:
+    = @assignment.status_display
+  p
+    strong Start date:
+    = @assignment.start_date
+  p
+    strong End date:
+    = @assignment.end_date
+  p
+    strong Completition date:
+    = @assignment.completition_date
+  p
+    strong Description:
+    = @assignment.description
+  p
+    strong Node:
+    = @assignment.node.name
+  p
+    strong User:
+    = @assignment.user.name
 
-=> link_to 'Edit', edit_assignment_path(@assignment)
-'|
-=< link_to 'Back', assignments_path
+  => link_to 'Edit', edit_assignment_path(@assignment)
+  '|
+  =< link_to 'Back', assignments_path
