--- a/app/views/assignments/_form.html.slim
+++ b/app/views/assignments/_form.html.slim
@@ -1,15 +1,44 @@
-= simple_form_for(@assignment) do |f|
-  = f.error_notification
-  = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
+.container(style="margin-top:50px;")
+  div.panel.panel-default(style="padding:30px;width:70%")
+    = simple_form_for(@assignment, html: {class: 'm-t'}) do |f|
+      = f.error_notification
+      = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
-  .form-inputs
-    = f.input :status, collection: Assignment.status_choices
-    = f.input :start_date
-    = f.input :end_date
-    = f.input :completition_date
-    = f.input :description
-    = f.association :node
-    = f.association :user, collection: User.all.order(:name)
+      .form-inputs
+      .form-group
+        = f.input :status, collection: Assignment.status_choices, label: false, placeholder: 'Status ', input_html: {class: "form-control", style: "width:60%"}
+      .form-group
+        .row
+          .col-md-2
+            strong Start Date
+          .col-md-5
+            =f.input :start_date, label: false, placeholder: '', input_html: {class: ""}
+      .form-group
+        .row
+          .col-md-2
+            strong End Date
+          .col-md-5
+            =f.input :end_date, label: false, placeholder: '', input_html: {class: ""}
+      .form-group
+        .row
+          .col-md-2
+            strong Deadline
+          .col-md-5
+            =f.input :completition_date, label: false, placeholder: '', input_html: {class: ""}
+      .form-group
+        = f.input :description, label: false, placeholder: 'Description ', input_html: {class: "form-control", style: "width:60%"}
+      .form-group
+        .row
+          .col-md-1
+            strong Node
+          .col-md-3
+            =f.association :node, label: false, placeholder: '', input_html: {class: ""}
+      .form-group
+        .row
+          .col-md-1
+            strong User
+          .col-md-3
+            =f.association :user, collection: User.all.order(:name), label: false, placeholder: '', input_html: {class: ""}
 
-  .form-actions
-    = f.button :submit
+      .form-actions
+        = f.button :submit
