--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -1,11 +1,11 @@
 .container(style="margin-top:80px")
   .row
-    .col-md-6
+    .col-md-3
       div.panel.panel-default(style="width:100%";padding:5px;)
         div(style="padding:20px;")
           .row
             .col-md-6
-              h3 Accounts list
+              h5 Accounts list
             /.col-md-5
               H3 = link_to "+ New Account", new_user_path
           hr
@@ -13,21 +13,22 @@
             = link_to account_path(a)
               = a.name
               hr
-    .col-md-6
+    .col-md-9
       div.panel.panel-default(style="width:100%";padding:10px;)
         div(style="padding:20px;")
           .row
             .col-md-6
-              h3 Tasks list
+              h3 My Tasks list
             /.col-md-5
               H3 = link_to "+ New Account", new_user_path
           hr
           - @assignments.each do |a|
+            - unless a.nil?
               .row
-                .col-md-1
+                .col-md-2
                   = link_to assignment_path(a)
                     = a.node.name
-                .col-md-2
+                .col-md-1
                   = a.status_display
                 .col-md-2
                   = a.user.name
@@ -35,5 +36,34 @@
                   = a.start_date
                 .col-md-3
                   = a.end_date
+              hr
+  if current_user.role == "admin"
+    .row
+      .col-md-12
+        div.panel.panel-default(style="width:100%";padding:10px;)
+          div(style="padding:20px;")
+            .row
+              .col-md-6
+                h3 All Tasks list
+              /.col-md-5
+                H3 = link_to "+ New Account", new_user_path
+            hr
+            - @all_assigns.each do |a|
+              - unless a.nil?
+                .row
+                  .col-md-2
+                    = link_to assignment_path(a)
+                      = a.node.name
+                  .col-md-2
+                    = a.node.root.name
+                  .col-md-2
+                    = a.status_display
+                  .col-md-2
+                    = a.user.name
+                  .col-md-2
+                    = a.start_date
+                  .col-md-2
+                    = a.end_date
+                hr      
             
          
