--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -16,7 +16,7 @@ nav.navbar.navbar-default.navbar-fixed-top role="navigation"
       ul.nav.navbar-nav.navbar-right
        - if current_user
           li
-            /= link_to "My Workspace", my_workspace_dashboard_index_path
+            = link_to "+ Node", new_node_path
             /a href="dashboard/my_workspace" style="" My Workspace
           li
             a href="/" style=""  My Tasks
