--- a/app/views/accounts/new.html.slim
+++ b/app/views/accounts/new.html.slim
@@ -1,5 +1,8 @@
-h1 New account
-div(style="margin-top:100px")
-	== render 'form'
+div(style="margin-top:80px")
+
+
+  div.panel.panel-default(style="margin-left:30px;width:40%;padding:10px;")
+    h1 New account
+    == render 'form'
 
 /= link_to 'Back', accounts_path
