--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -1,34 +1,34 @@
 .container(style="margin-top:80px")
   .row
-    .col-md-3
+    .col-md-4
       div.panel.panel-default(style="width:100%";padding:5px;)
         div(style="padding:20px;")
           .row
             .col-md-6
-              h5 Accounts list
+              h4 Projects list
             /.col-md-5
               H3 = link_to "+ New Account", new_user_path
           hr
-          - @accounts.each do |a|
-            = link_to account_path(a)
-              = a.name
+          - @account.nodes.where("parent_id IS ?", nil).each do |node|
+            = link_to node_path(node)
+              = node.root.name
               hr
-    .col-md-9
+    .col-md-8
       div.panel.panel-default(style="width:100%";padding:10px;)
         div(style="padding:20px;")
           .row
             .col-md-6
-              h3 My Tasks list
+              h4 My Tasks list
             /.col-md-5
               H3 = link_to "+ New Account", new_user_path
           hr
           - @assignments.each do |a|
             - unless a.nil?
               .row
-                .col-md-2
+                .col-md-3
                   = link_to assignment_path(a)
                     = a.node.name
-                .col-md-1
+                /.col-md-1
                   = a.status_display
                 .col-md-2
                   = a.user.name
