--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -16,6 +16,8 @@ nav.navbar.navbar-default.navbar-fixed-top role="navigation"
       ul.nav.navbar-nav.navbar-right
        - if current_user
           li
+            = link_to "My Account", account_path(current_user.accounts   .first)
+          li
             = link_to "+ Node", new_node_path
             /a href="dashboard/my_workspace" style="" My Workspace
           li
