--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -9,10 +9,11 @@
             /.col-md-5
               H3 = link_to "+ New Account", new_user_path
           hr
-          - @account.nodes.where("parent_id IS ?", nil).each do |node|
-            = link_to node_path(node)
-              = node.root.name
-              hr
+          - if @account
+            - @account.nodes.where("parent_id IS ?", nil).each do |node|
+              = link_to node_path(node)
+                = node.root.name
+                hr
     .col-md-8
       div.panel.panel-default(style="width:100%";padding:10px;)
         div(style="padding:20px;")
@@ -64,6 +65,4 @@
                     = a.start_date
                   .col-md-2
                     = a.end_date
-                hr      
-            
-         
+                hr
