Approve and revision of task

--- a/app/views/accounts/show.html.slim
+++ b/app/views/accounts/show.html.slim
@@ -31,6 +31,6 @@ div(style="margin-top:100px;")
             hr
     
 
-=> link_to 'Edit', edit_account_path(@account)
-'|
-=< link_to 'Back', accounts_path
+/=> link_to 'Edit', edit_account_path(@account)
+  '|
+  =< link_to 'Back', accounts_path
