--- a/app/views/assignments/_form.html.slim
+++ b/app/views/assignments/_form.html.slim
@@ -38,7 +38,7 @@
           .col-md-1
             strong User
           .col-md-3
-            =f.association :user, collection: User.all.order(:name), label: false, placeholder: '', input_html: {class: ""}
+            =f.association :user, collection: current_user.accounts.first.users.all.order(:name), label: false, placeholder: '', input_html: {class: ""}
 
       .form-actions
         = f.button :submit
