--- a/app/views/accounts/my_workspace.html.slim
+++ b/app/views/accounts/my_workspace.html.slim
@@ -47,7 +47,7 @@ div.panel.panel-default(style="margin-left:30px;width:95%;padding:5px;")
                       img.img-responsive.center-block alt=("post thumb image") src="/assets/entertainment-fiction.jpg" /
                     .cp-card-details
                       .cp-card-text style=("overflow: set !important") 
-                        = link_to nodes_path
+                        = link_to node_path(node)
                           h4.cp-card-title = node.root.name
                         /! <h5 class="cp-card-sub-title">New entity</h5
                         = node.root.description
