--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -28,9 +28,9 @@
                 .col-md-3
                   = link_to assignment_path(a)
                     = a.node.name
-                /.col-md-1
-                  = a.status_display
                 .col-md-2
+                  = a.status_display
+                /.col-md-2
                   = a.user.name
                 .col-md-3
                   = a.start_date
@@ -43,12 +43,12 @@
         div.panel.panel-default(style="width:100%";padding:10px;)
           div(style="padding:20px;")
             .row
-              .col-md-6
-                h3 All Tasks list
-              /.col-md-5
-                H3 = link_to "+ New Account", new_user_path
+              .col-md-9
+                h4 All Tasks list
+              .col-md-3
+                h4 = link_to "All Assignments", assignments_path
             hr
-            - @all_assigns.each do |a|
+            - @all_assigns.limit(5).each do |a|
               - unless a.nil?
                 .row
                   .col-md-2
