--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -46,8 +46,9 @@
             .row
               .col-md-9
                 h4 All Tasks list
-              .col-md-3
-                h4 = link_to "All Assignments", assignments_path
+              - if @all_assigns.count > 5
+                .col-md-3
+                  h4 = link_to "All Assignments", assignments_path
             hr
             - @all_assigns.limit(5).each do |a|
               - unless a.nil?
