--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -11,6 +11,7 @@ nav.navbar.navbar-default.navbar-fixed-top role="navigation"
       a.navbar-brand href="/"
         .hidden-sm.hidden-xs
         img alt=("Logo humminglive new") src="https://www.humminglive.com/assets/logo-humminglive_new-0a6fc8cc5bc42d281ff387e104f172ae.png" /
+        div(style="font-size:16px;margin-left:80px;") Studio
     /! Collect the nav links, forms, and other content for toggling
     #navbar-top.collapse.navbar-collapse.hidden-xs
       ul.nav.navbar-nav.navbar-right
@@ -21,7 +22,7 @@ nav.navbar.navbar-default.navbar-fixed-top role="navigation"
             = link_to "Manage Projects", account_my_workspace_path(current_user.accounts.first)
           li
             = link_to "My Tasks", assignments_path
-          li
+          /li
             = link_to "+ New project", new_node_path
             /a href="dashboard/my_workspace" style="" My Workspace
           /li
