--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 // @import "bootstrap";
+//@import "bootstrap/scss/bootstrap";
 @import "hl-style_new";
 @import "bootstrap.min.css";
 @import "home-style";
